# DatabaseVulnApp

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/websarva/wings/android/databasevulnapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: load_url
app/src/main/cpp/: CMakeLists.txt  database.cpp  log.cpp  shared_preference.cpp
app/src/main/java/com/websarva/wings/android/databasevulnapp/: MainActivity.kt
app/src/main/java/com/websarva/wings/android/databasevulnapp/di/: Application.kt  Module.kt
app/src/main/java/com/websarva/wings/android/databasevulnapp/model/: ColumnName.kt  Database.kt  FileName.kt  KeyName.kt  RetPreference.kt  Users.kt
app/src/main/java/com/websarva/wings/android/databasevulnapp/repository/: ContentProviderRepository.kt  DatabaseRepository.kt  FirebaseStorageRepository.kt  RealtimeRepository.kt  SharedPreferenceRepository.kt
app/src/main/java/com/websarva/wings/android/databasevulnapp/ui/: MainActivity.kt
app/src/main/java/com/websarva/wings/android/databasevulnapp/viewmodel/: SecureSecretKey.kt
app/src/main/res/layout/: activity_main.xml  fragment_contentprovider01.xml  fragment_contentprovider02.xml  fragment_database.xml  fragment_internal.xml  row_top.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/websarva/wings/android/databasevulnapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+24 files in other folders)
